fix:设置wrap换行

--- a/docs/pc/p__index.chunk.css
+++ b/docs/pc/p__index.chunk.css
@@ -1,1 +1,1 @@
-.title___nwRif{background:#f2c079}.consumption-bill-view___M2jgI{display:flex;border:1px solid #ccc;padding:6px 12px;gap:12px}
+.title___nwRif{background:#f2c079}.consumption-bill-view___M2jgI{display:flex;flex-wrap:wrap;border:1px solid #ccc;padding:6px 12px;gap:12px}
